[package]
name = "triangulation"
version = "0.1.0"
edition = "2024"
description = "Delaunay and Voronoi"
authors = ["Nico <nico_verdeille@hotmail.com>"]
repository = "https://github.com/Majavar/wasm-triangulation"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["logger"] }
dioxus-free-icons = { version = "0.9.0", features = ["feather"] }
getrandom = { version = "0.3.1", features = ["wasm_js"] }
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tracing = "0.1.41"
web-sys = { version = "0.3.77", features = ["MediaQueryList", "Window"] }

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

